Spec § Add missing <ins> to Arguments in PipelineBody

--- a/spec.html
+++ b/spec.html
@@ -1958,7 +1958,7 @@ PipelineBody[In, Yield, Await] :
   PipelineBareConstructorCall
   PipelineBareAwaitedFunctionCall[?Await]
   PipelineTopicBody[?In, ?Yield, ?Await]
-  Arguments[?Yield, ?Await]
+  <ins class=block>Arguments[?Yield, ?Await]</ins>
 
 PipelineBareFunctionCall :
   SimpleReference
