Readme/Spec: Change Additional Features TC/TF to TS and FS and require |> to opt in

--- a/spec.html
+++ b/spec.html
@@ -1123,8 +1123,8 @@ PipelineBody : PipelineTopicExpression
 
 </emu-annex>
 
-<emu-annex id=sec-additional-feature-tc>
-<h1>Additional Feature TC: Topical `catch`es</h1>
+<emu-annex id=sec-additional-feature-ts>
+<h1>Additional Feature TS: Pipeline `try` Clauses</h1>
 <p><strong>Not at Stage 0.</strong></p>
 <p>[TODO]</p>
 </emu-annex>
@@ -2230,8 +2230,8 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 </emu-annex>
 
-<emu-annex id=sec-additional-feature-tf>
-<h1>Additional Feature TF: Topical `for`s</h1>
+<emu-annex id=sec-additional-feature-fs>
+<h1>Additional Feature TF: Pipeline `for` Statements</h1>
 <p><strong>Not at Stage 0.</strong></p>
 <p>[TODO]</p>
 </emu-annex>
