Spec: Update change Feature ST → TS

--- a/spec.html
+++ b/spec.html
@@ -611,7 +611,7 @@ AssignmentExpression[In, Yield, Await] :
 <h1>Iteration Statements</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-iteration-statements-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature ST. [TODO: Add link to Additional Feature ST once it’s written.]</p>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-iteration-statements>original Iteration Statements clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-iteration-statements-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
 </emu-note>
 
 <emu-clause id=sec-iteration-statements-static-semantics-early-errors>
@@ -679,7 +679,7 @@ IterationStatement :
 <h1>Static Semantics: Early Errors</h1>
 
 <emu-note type=editor>
-<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-try-statement-static-semantics-early-errors>original `try` Statement, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-try-statement-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature ST. [TODO: Add link to Additional Feature ST once it’s written.]</p>
+<p>This section amends the <a href=https://tc39.github.io/ecma262/#sec-try-statement-static-semantics-early-errors>original `try` Statement, Static Semantics: Early Errors clause</a>. It is forward compatible with <emu-xref href=#sec-additional-feature-np-try-statement-static-semantics-early-errors>further modifications by Additional Feature NP</emu-xref> and further modifications by Additional Feature TS. [TODO: Add link to Additional Feature TS once it’s written.]</p>
 </emu-note>
 
 <emu-grammar>
