Spec, § Features PF & NP: Add links to explainer document

--- a/spec.html
+++ b/spec.html
@@ -836,6 +836,8 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 <p><strong>This annex is unfinished.</strong> Async pipeline functions are yet to be added.</p>
 
+<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-pf>explainer document, § Motivation, Additional Feature PF</a> for information on this motivation.
+
 <emu-table id=table-additional-feature-pf-examples caption="Examples of Pipeline Functions">
 <table>
 <tr>
@@ -1135,6 +1137,8 @@ PipelineBody : PipelineTopicExpression
 <p>This annex specifies additional ECMAScript language syntax and semantics for <strong>n-ary smart pipelines</strong> and <strong>multiple lexical topics</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing n-ary pipeline forms `headList |> …` and `… |> bodyList |> …`, an additional secondary topic reference `##`, a tertiary topic reference `###`, a |RestTopicReference| `...`, and a parenthesized pipeline-head syntax to bind the new references [TODO: xref]. When combined with the <emu-xref href=#sec-additional-feature-pf>additional feature PF</emu-xref>, the resulting additional feature PF+NP enables <strong>partial application</strong> of functions/expressions into n-ary functions. [TODO: xref with PF+NP]</p>
 
 <p><strong>This annex is unfinished.</strong></p>
+
+<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-np>explainer document, § Motivation, Additional Feature NP</a> for information on this motivation.
 
 <emu-table id=table-additional-feature-np-examples caption="Examples of Multiple Lexical Topics">
 <table>
