Spec § Features PF & NP: Close unclosed paragraphs

--- a/spec.html
+++ b/spec.html
@@ -836,7 +836,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 <p><strong>This annex is unfinished.</strong> Async pipeline functions are yet to be added.</p>
 
-<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-pf>explainer document, § Motivation, Additional Feature PF</a> for information on this motivation.
+<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-pf>explainer document, § Motivation, Additional Feature PF</a> for information on this feature's motivation.</p>
 
 <emu-table id=table-additional-feature-pf-examples caption="Examples of Pipeline Functions">
 <table>
@@ -1115,7 +1115,7 @@ PipelineBody : PipelineTopicExpression
 
 <p><strong>This annex is unfinished.</strong></p>
 
-<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-np>explainer document, § Motivation, Additional Feature NP</a> for information on this motivation.
+<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-np>explainer document, § Motivation, Additional Feature NP</a> for information on this feature's motivation.</p>
 
 <emu-table id=table-additional-feature-np-examples caption="Examples of Multiple Lexical Topics">
 <table>
