--- a/spec.html
+++ b/spec.html
@@ -430,18 +430,10 @@ PipelineHead[?In, ?Yield, ?Await] :
 
 PipelineBody[In, Yield, Await] :
   PipelineBareFunctionCall
-  PipelineBareConstructorCall
-  PipelineBareAwaitedFunctionCall[?Await]
   PipelineTopicExpression[?In, ?Yield, ?Await]
 
 PipelineBareFunctionCall :
   SimpleReference
-
-PipelineBareConstructorCall :
-  `new` SimpleReference
-
-PipelineBareAwaitedFunctionCall[Await] :
-  [+Await] `await` SimpleReference
 
 SimpleReference :
   IdentifierReference
@@ -536,21 +528,6 @@ PipelineTopicExpression[In, Yield, Await] :
 * Step 4 is replaced by:
   2. Let _functionExpr_ be the |MemberExpression| that is covered by _SimpleReference_.
   3. Let _ref_ be the result of evaluating _functionExpr_.
-</emu-alg>
-
-<emu-grammar>PipelineBareConstructorCall : `new` SimpleReference</emu-grammar>
-<emu-alg>
-1. Let _constructExpr_ be the |NewExpression| that is covered by _SimpleReference_.
-2. Return ? EvaluateNew(NewExpression, _headValues_).
-</emu-alg>
-
-<emu-grammar>PipelineBareAwaitedFunctionCall : `await` SimpleReference</emu-grammar>
-<p>This algorithm is an altered version of the algorithm of <emu-xref href="#sec-function-calls-runtime-semantics-evaluation">Function Calls, Runtime Semantics: Evaluation</emu-xref>, modified as follows:</p>
-<emu-alg>
-1. Let _asyncFunctionExpr_ be the |MemberExpression| that is covered by _SimpleReference_.
-2. Let _exprRef_ be the result of evaluating _asyncFunctionExpr_.
-3. Let _value_ be ? GetValue(_exprRef_).
-4. Return ? Await(_value_).
 </emu-alg>
 
 <emu-grammar>PipelineTopicExpression : ConditionalExpression</emu-grammar>
@@ -815,6 +792,114 @@ Normally, Contains does not look inside most function forms. However, Contains i
 </emu-clause>
 
 </emu-clause>
+
+<emu-annex id=sec-additional-feature-bc>
+<h1>Additional Feature BC: Bare Constructor Calls</h1>
+<p><strong>Not at Stage 0.</strong></p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>bare awaited function calls</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>bare-style pipeline form</strong>, in which a |SimpleReference| is prepended with an `await`.</p>
+
+<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-ba>explainer document, § Motivation, Additional Feature BP</a> for information on this feature's motivation.</p>
+
+<emu-annex id=sec-additional-feature-bc-ecmascript-language-expressions>
+<h1>ECMAScript Language: Expressions</h1>
+
+<emu-annex id=sec-additional-feature-bc-pipeline-operator>
+<h1>Pipeline Operator</h1>
+<emu-note type=editor>
+<p>This section revises the <emu-xref href=#sec-pipeline-operator>new clause in the core proposal</emu-xref>. It is mutually compatible with <emu-xref href=#sec-additional-feature-np-pipeline-operator>further modifications by Additional Feature NP</emu-xref>.</p>
+</emu-note>
+
+<h2>Syntax</h2>
+<emu-grammar type=definition>
+PipelineBody[In, Yield, Await] :
+  PipelineBareFunctionCall
+  <ins>PipelineBareConstructorCall</ins>
+  PipelineTopicExpression[?In, ?Yield, ?Await]
+
+<ins class=block>
+PipelineBareConstructorCall :
+  `new` SimpleReference
+</ins>
+</emu-grammar>
+
+<emu-annex id=sec-additional-feature-bc-pipeline-operator-runtime-semantics-pipelinebodyevaluation aoid=PipelineBodyEvaluation>
+<h1>Runtime Semantics: PipelineBodyEvaluation</h1>
+<p>With parameter _headValues_.</p>
+
+<emu-note type=editor>
+<p>This section appends to the <emu-xref href=#sec-pipeline-operator-runtime-semantics-pipelinebodyevaluation>new clause in the core proposal</emu-xref>.</p>
+</emu-note>
+
+<ins class=block>
+<emu-grammar>PipelineBareConstructorCall : `new` SimpleReference</emu-grammar>
+<emu-alg>
+1. Let _constructExpr_ be the |NewExpression| that is covered by _SimpleReference_.
+2. Return ? EvaluateNew(NewExpression, _headValues_).
+</emu-alg>
+</ins>
+
+</emu-annex>
+
+</emu-annex>
+
+</emu-annex>
+
+</emu-annex>
+
+<emu-annex id=sec-additional-feature-ba>
+<h1>Additional Feature BA: Bare Awaited Calls</h1>
+<p><strong>Not at Stage 0.</strong></p>
+<p>This annex specifies additional ECMAScript language syntax and semantics for <strong>bare awaited function calls</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>bare-style pipeline form</strong>, in which a |SimpleReference| is prepended with an `await`.</p>
+
+<p>See the <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md#additional-feature-ba>explainer document, § Motivation, Additional Feature BP</a> for information on this feature's motivation.</p>
+
+<emu-annex id=sec-additional-feature-ba-ecmascript-language-expressions>
+<h1>ECMAScript Language: Expressions</h1>
+
+<emu-annex id=sec-additional-feature-ba-pipeline-operator>
+<h1>Pipeline Operator</h1>
+<emu-note type=editor>
+<p>This section revises the <emu-xref href=#sec-pipeline-operator>new clause in the core proposal</emu-xref>. It is mutually compatible with <emu-xref href=#sec-additional-feature-np-pipeline-operator>further modifications by Additional Feature NP</emu-xref>.</p>
+</emu-note>
+
+<h2>Syntax</h2>
+<emu-grammar type=definition>
+PipelineBody[In, Yield, Await] :
+  PipelineBareFunctionCall
+  <ins>PipelineBareAwaitedFunctionCall</ins>
+  PipelineTopicExpression[?In, ?Yield, ?Await]
+
+<ins class=block>
+PipelineBareAwaitedFunctionCall[Await] :
+  [+Await] `await` SimpleReference
+</ins>
+</emu-grammar>
+
+<emu-annex id=sec-additional-feature-ba-pipeline-operator-runtime-semantics-pipelinebodyevaluation aoid=PipelineBodyEvaluation>
+<h1>Runtime Semantics: PipelineBodyEvaluation</h1>
+<p>With parameter _headValues_.</p>
+
+<emu-note type=editor>
+<p>This section appends to the <emu-xref href=#sec-pipeline-operator-runtime-semantics-pipelinebodyevaluation>new clause in the core proposal</emu-xref>.</p>
+</emu-note>
+
+<ins class=block>
+<emu-grammar>PipelineBareAwaitedFunctionCall : `await` SimpleReference</emu-grammar>
+<p>This algorithm is an altered version of the algorithm of <emu-xref href="#sec-function-calls-runtime-semantics-evaluation">Function Calls, Runtime Semantics: Evaluation</emu-xref>, modified as follows:</p>
+<emu-alg>
+1. Let _asyncFunctionExpr_ be the |MemberExpression| that is covered by _SimpleReference_.
+2. Let _exprRef_ be the result of evaluating _asyncFunctionExpr_.
+3. Let _value_ be ? GetValue(_exprRef_).
+4. Return ? Await(_value_).
+</emu-alg>
+</ins>
+
+</emu-annex>
+</emu-annex>
+
+</emu-annex>
+
+</emu-annex>
 
 <emu-annex id=sec-additional-feature-bp>
 <h1>Additional Feature BP: Block Pipelines</h1>
