Spec § Feature FS: Correct annex heading title

--- a/spec.html
+++ b/spec.html
@@ -2380,7 +2380,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 </emu-annex>
 
 <emu-annex id=sec-additional-feature-fs>
-<h1>Additional Feature TF: Pipeline `for` Statements</h1>
+<h1>Additional Feature FS: Pipeline `for` Statements</h1>
 <p><strong>Not at Stage 0.</strong></p>
 <p>[TODO]</p>
 </emu-annex>
