Spec § Feature TS: Update heading title – clauses → statements

--- a/spec.html
+++ b/spec.html
@@ -2374,7 +2374,7 @@ Normally, Contains does not look inside most function forms. However, Contains i
 </emu-annex>
 
 <emu-annex id=sec-additional-feature-ts>
-<h1>Additional Feature TS: Pipeline `try` Clauses</h1>
+<h1>Additional Feature TS: Pipeline `try` Statements</h1>
 <p><strong>Not at Stage 0.</strong></p>
 <p>[TODO]</p>
 </emu-annex>
