Spec § CP, Declarative Environment Records: Remove vestigial <ins>

--- a/spec.html
+++ b/spec.html
@@ -188,10 +188,10 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 </tr>
 <tr>
 <td>
-<ins>GetPrimaryTopicBinding()</ins>
+GetPrimaryTopicBinding()
 </td>
 <td>
-<ins>Return the value of the topic binding (`#` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.</ins>
+Return the value of the topic binding (`#` binding) of this Environment Record. This method is never called when the HasTopicBinding method would return *false*.
 </td>
 </tr>
 </tbody>
